@@ -1,3 +1,7 @@
+2010-01-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* Genweights: use netCDF2 (64bit) for large remap weights files [request Daniel Goll]
+	
 2010-01-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* added module Fourier
